# rs-memvid-mcp

./: Cargo.toml
.claude/: mind.mv2  settings.json
memories/: project-notes.memvid
src/: main.rs  memvid_service.rs  memvid_wrapper.rs  types.rs
src/memvid_service/: base.rs
