[package]
name = "memvid-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
memvid-core = { version = "2.0" }
rmcp = { version = "0.12.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
    "axum"
] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
schemars = "1.2.0"
